# ha-cfl-commute

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  USAGE.md  coverage.xml  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: release.yaml
custom_components/cfl_commute/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/cfl_commute/translations/: en.json
custom_components/my_rail_commute/: api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  helpers.py  manifest.json  station_data.json  strings.json
docs/superpowers/specs/: 2026-03-17-cfl-commute-design.md
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_integration.py  test_sensor.py  update_integration.py
tests/fixtures/: departures_cancelled.json  departures_delayed.json  departures_on_time.json
