[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfl_commute"
version = "0.0.1"
description = "Home Assistant integration for Luxembourg CFL trains"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "aiohttp>=3.8",
    "homeassistant>=2023.0",
    "voluptuous>=0.13",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
